--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -1,8 +1,8 @@
-name: GitHub Clone Count Update Every Hour
+name: GitHub Clone Count Update
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
   
 permissions:
