--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "charlink",
+  "name": "@charisprod/charlink",
   "version": "1.1.1",
   "description": "A Fresh Start For Something New",
   "author": "charisprod",
